Added readme file

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "holesail",
     "server"
   ],
-  "author": "supersursuryaansh",
+  "author": "supersuryaansh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/holesail/holesail-server/issues"
