--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "hyperdht": "^6.11.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
