--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "Holepunch"
   ],
   "author": "supersuryaansh",
-  "license": "ISC",
+  "license": "GNU GPL v3",
   "bugs": {
     "url": "https://github.com/holesail/holesail-server/issues"
   },
