--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "holesail-server",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Server module for holesail to create and announce local server on the DHT",
   "main": "index.js",
   "dependencies": {
-    "@hyper-cmd/lib-keys": "https://github.com/holepunchto/hyper-cmd-lib-keys#v0.0.2",
-    "@hyper-cmd/lib-net": "https://github.com/holepunchto/hyper-cmd-lib-net#v0.0.8",
     "graceful-goodbye": "^1.3.0",
+    "hyper-cmd-lib-keys": "^0.0.2",
+    "hyper-cmd-lib-net": "^0.0.1",
     "hyperdht": "^6.11.7"
   },
   "scripts": {
