--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "holesail-server",
-  "version": "1.3.6",
+  "version": "1.4.0",
   "description": "Server module for holesail to create and announce local server on the DHT",
   "main": "index.js",
   "dependencies": {
+    "@holesail/hyper-cmd-lib-net": "latest",
+    "b4a": "^1.6.6",
     "hyper-cmd-lib-keys": "^0.0.2",
-    "hyper-cmd-lib-net": "^0.0.1",
     "hyperdht": "^6.11.7"
   },
   "scripts": {
@@ -17,6 +18,7 @@
   },
   "keywords": [
     "holesail",
+    "holesail-server",
     "HyperDHT",
     "Holepunch"
   ],
