--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Server module for holesail to create and announce local server on the DHT",
   "main": "index.js",
   "dependencies": {
-    "@holesail/hyper-cmd-lib-net": "latest",
+    "@holesail/hyper-cmd-lib-net": "^0.1.0",
     "b4a": "^1.6.6",
     "hyper-cmd-lib-keys": "^0.0.2",
-    "hyperdht": "^6.11.7"
+    "hyperdht": "^6.16.2"
   },
   "scripts": {
     "test": "node test.js"
