--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@holesail/hyper-cmd-lib-net": "^0.1.0",
     "b4a": "^1.6.6",
     "hyper-cmd-lib-keys": "^0.0.2",
-    "hyperdht": "^6.16.2"
+    "hyperdht": "^6.16.2",
+    "udx-native": "^1.11.2"
   },
   "scripts": {
     "test": "node test.js"
