--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Server module for holesail to create and announce local server on the DHT",
   "main": "index.js",
   "dependencies": {
-    "@holesail/hyper-cmd-lib-net": "^0.1.0",
+    "@holesail/hyper-cmd-lib-net": "^0.2.0",
     "b4a": "^1.6.6",
     "hyper-cmd-lib-keys": "^0.0.2",
     "hyperdht": "^6.16.2",
-    "standard": "^17.1.2",
-    "udx-native": "^1.11.2"
+    "bare-net": "^1.0.1",
+    "net": "npm:bare-net"
   },
   "scripts": {
     "test": "node test.js"
@@ -29,5 +29,8 @@
   "bugs": {
     "url": "https://github.com/holesail/holesail-server/issues"
   },
-  "homepage": "https://github.com/holesail/holesail-server#readme"
+  "homepage": "https://github.com/holesail/holesail-server#readme",
+  "devDependencies": {
+    "standard": "^17.1.2"
+  }
 }
