--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "holesail-server",
   "version": "1.4.4",
-  "description": "Server module for holesail to create and announce local server on the DHT",
+  "description": "Proxy any server peer-to-peer using Holepunching.",
   "main": "index.js",
   "dependencies": {
     "@holesail/hyper-cmd-lib-net": "^0.2.0",
     "b4a": "^1.6.6",
+    "bare-net": "^2.0.1",
     "hyper-cmd-lib-keys": "^0.0.2",
-    "hyperdht": "^6.16.2",
-    "bare-net": "^1.0.1",
+    "hyperdht": "^6.20.1",
     "net": "npm:bare-net"
   },
   "scripts": {
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/holesail/holesail-server#readme",
   "devDependencies": {
+    "brittle": "^3.10.1",
     "standard": "^17.1.2"
   }
 }
