--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "net": "npm:bare-net"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "npx standard && node test.mjs"
   },
   "repository": {
     "type": "git",
