--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bare-net": "^2.0.1",
     "hyper-cmd-lib-keys": "^0.0.2",
     "hyperdht": "^6.20.1",
-    "net": "npm:bare-net"
+    "net": "npm:bare-net",
+    "z32": "^1.1.0"
   },
   "scripts": {
     "test": "npx standard && node test.mjs && bare test.mjs"
