Breaking Changes: Shift to Z32
* put information on DHT

* put records on DHT

* Add mutable put and rename serve to start: Breaking changes

* Readme

* Extend put functionality

* Put udp state on dht

* Add publickey and key

* Cleanup comment smh

* Update example

* Switch to z32

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "bare-net": "^2.0.1",
     "hyper-cmd-lib-keys": "^0.0.2",
     "hyperdht": "^6.20.1",
-    "net": "npm:bare-net"
+    "net": "npm:bare-net",
+    "z32": "^1.1.0"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "npx standard && node test.mjs && bare test.mjs"
   },
   "repository": {
     "type": "git",
