--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Proxy any server peer-to-peer using Holepunching.",
   "main": "index.js",
   "dependencies": {
-    "@holesail/hyper-cmd-lib-net": "^0.4.0",
-    "b4a": "^1.6.6",
-    "bare-net": "^2.0.1",
-    "hyper-cmd-lib-keys": "^0.0.2",
-    "hyperdht": "^6.20.1",
-    "net": "npm:bare-net",
+    "@holesail/hyper-cmd-lib-net": "^1.1.1",
+    "b4a": "^1.7.3",
+    "hyper-cmd-lib-keys": "^0.2.0",
+    "hyperdht": "^6.27.0",
     "z32": "^1.1.0",
     "holesail-logger": "^1.1.0"
   },
   "scripts": {
-    "test": "npx standard && node test.mjs && bare test.mjs"
+    "test": "npm run lint-check && node test.mjs && bare test.mjs",
+    "lint-check": "npx prettier . --check",
+    "lint": "npx prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/holesail/holesail-server#readme",
   "devDependencies": {
     "brittle": "^3.10.1",
-    "standard": "^17.1.2"
+    "prettier": "^3.6.2",
+    "prettier-config-holepunch": "^2.0.0"
   }
 }
