--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -20,4 +20,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
+      - run: npm install bare -g
       - run: npm run test
